--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/cli": "^1.49.0",
     "@sentry/node": "^5.9.0",
     "jest": "^24.9.0"
   },
